--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-fetch": "^3.2.6",
     "pg": "^8.7.3",
     "react": "^18.1.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0"
